[package]
name = "leveldbcat"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "LeveldbCat"
path = "src/main.rs"

[dependencies]
csv = "1.4.0"
dirs = "6.0.0"
fontdb = "0.23.0"
gpui = "0.2.2"
rfd = "0.17.2"
rusty-leveldb = "4.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sys-locale = "0.3.2"
tempfile = "3.27.0"
